--- a/download.html
+++ b/download.html
@@ -1,4 +1,4 @@
-<a href="itms-services://?action=download-manifest&url=https://172.19.196.73/ipa/dele88.plist">
+<a href="itms-services://?action=download-manifest&url=https://inovalcalabia.github.io/dele88.plist">
     click this link to install
 </a>
 
