--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
 		<script src="bootstrap/js/jquery.min.js"></script>
 			<!-- Latest compiled and minified JavaScript -->
 		<script src="bootstrap/js/bootstrap.min.js"></script>
-		
+		<script src="test.js"></script>
 	</body>
 </html>
